Fixes: update Side Menu z-index

--- a/dev/css/src/_sideMenu.scss
+++ b/dev/css/src/_sideMenu.scss
@@ -3,7 +3,7 @@
  */
 aside {
 	position: fixed;
-	z-index: 1000;
+	z-index: 100;
 	top: 0;
 	left: 25px;
 	padding: 3.95rem 2.2rem 2.2rem;
